# PCB_Recycling_Project

./: GoToCoordinates_Code.txt  README.md
Information_Documents/: package.xml
Pcb_Components_recognition_Yolo/code/: Coordinates_program.ipynb  README.txt  Test_program.ipynb  Train_program.ipynb
Program_Files/: KeyboardController_Code.txt
